Fixed issue with initial project load, percentage complete now tracks with playback. Still have an issue with the jumpto positioning. Added the red bar and time indicator to the jumpto bar, only starts to show when play is pressed. Still need to add in upper and lower limits to the blue bars tracking position. Reset position also updates the percentage complete.

--- a/client/packages/events/events.css
+++ b/client/packages/events/events.css
@@ -122,10 +122,15 @@
     width: 100%;
     height: 40px;
     line-height: 40px;
-    background-color: rgba(0,100,220,0.5);
+    background-color: rgba(0,100,220,0.4);
     text-align: center;
     color: white;
     font-weight: bold;
+    z-index: 30;
+}
+.mf-time-overview-line.clear {
+    background-color: transparent;
+    z-index: 0;
 }
 .mf-current-playback-point {
     position: absolute;
@@ -134,6 +139,25 @@
     height: 100%;
     background-color: rgba(0,100,220,0.8);
     border-right: solid 1px rgba(0,90,210,1);
+    z-index: 50;
+}
+.mf-current-playback-position-bar {
+    position: absolute;
+    top:0px;
+    left: 0px;
+    height: 100%;
+    border-right: solid 2px #AA0000;
+    z-index: 45;
+}
+.mf-playback-text {
+    position: absolute;
+    left: 0px;
+    width: 70px;
+    text-align: right;
+    color: #AA0000;
+    font-family: arial;
+    font-size: 10px;
+    font-weight: bold;
 }
 
 .mf-button {
